# kuka_lwr4_description

./: CMakeLists.txt  package.xml
config/: urdf.rviz
defs/: force_torque_sensor_defs.xml  gazebo_defs.xml  kuka_lwr_arm_defs.xml  pen_defs.xml  sdh_defs.xml  util_defs.xml
launch/: display.launch
meshes/kuka_colour/: base.dae  kuka_ring.dae  kuka_wrist.dae  link1.dae  link1_m.dae  link2.dae  link2.obj.mtl  link2_m.dae  link3.dae  link3_m.dae  link4.dae  link4.obj.mtl  link4_m.dae  link5.dae  link5.obj.mtl  link7.dae
meshes/robotiq/: AGS-CPL-175_20171219.dae
robots/: kuka_lwr_arm.urdf.xml  lwr.urdf  lwr_ft.urdf  lwr_ft.urdf.xacro  lwr_ft_simple.urdf  lwr_hand.urdf  lwr_hand_pen.urdf  lwr_pen.srdf  lwr_pen.urdf  lwr_pen.urdf.xacro  lwr_pen_simple.urdf  lwr_picasso.urdf  lwr_robotiq.urdf  lwr_robotiq_3finger.urdf.xacro  lwr_sdh.urdf  lwr_sdh.urdf.xacro  lwr_sdh_simple.urdf  lwr_simple.urdf
srdf/: lwr.srdf  lwr_ft.srdf  lwr_pen.srdf  lwr_robotiq_3finger.srdf  lwr_sdh.srdf
urdf/: lwr.urdf.xacro  lwr_ft.urdf.xacro  lwr_pen.urdf.xacro  lwr_robotiq_3finger.urdf.xacro  lwr_sdh.urdf.xacro
urdf/defs/: gazebo_defs.gazebo  kuka_lwr_arm_defs.urdf.xacro  pen_defs.xacro
