<package format="2">
  <name>kuka_lwr4_description</name>
  <version>0.0.1</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of the KUKA LWR robot. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.</description>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <author>Konrad Banachowicz</author>
  <author>Vladimir Ivan</author>
  <author>Wolfgang Merkt</author>
  <author>Christian Rauch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>schunk_description</depend>
  <depend>robotiq_s_model_visualization</depend>

</package>
